[gd_scene load_steps=6 format=2]

[ext_resource path="res://Font/Roboto-Light.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scripts/CreateSetScene.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 2 )

[node name="CreateSetScene" type="Node2D"]
script = ExtResource( 3 )

[node name="ScreenMarginContainer" type="MarginContainer" parent="."]
margin_right = 480.0
margin_bottom = 720.0
theme = SubResource( 2 )
custom_constants/margin_right = 30
custom_constants/margin_top = 240
custom_constants/margin_left = 30
custom_constants/margin_bottom = 240
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="ScreenMarginContainer"]
margin_left = 30.0
margin_top = 240.0
margin_right = 450.0
margin_bottom = 480.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PanelMarginContainer" type="MarginContainer" parent="ScreenMarginContainer/Panel"]
margin_right = 420.0
margin_bottom = 250.0
custom_constants/margin_right = 15
custom_constants/margin_top = 30
custom_constants/margin_left = 15
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FullFormContainer" type="VBoxContainer" parent="ScreenMarginContainer/Panel/PanelMarginContainer"]
margin_left = 15.0
margin_top = 30.0
margin_right = 405.0
margin_bottom = 230.0

[node name="HelpFormDivider" type="HSplitContainer" parent="ScreenMarginContainer/Panel/PanelMarginContainer/FullFormContainer"]
margin_right = 390.0
margin_bottom = 158.0
size_flags_horizontal = 3
size_flags_vertical = 3
dragger_visibility = 1

[node name="FormFieldsDivider" type="HSplitContainer" parent="ScreenMarginContainer/Panel/PanelMarginContainer/FullFormContainer/HelpFormDivider"]
margin_right = 357.0
margin_bottom = 158.0
size_flags_horizontal = 3
size_flags_vertical = 3
split_offset = -100
dragger_visibility = 1

[node name="FormLabelsContainer" type="VBoxContainer" parent="ScreenMarginContainer/Panel/PanelMarginContainer/FullFormContainer/HelpFormDivider/FormFieldsDivider"]
margin_right = 92.0
margin_bottom = 158.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="NameLabel" type="RichTextLabel" parent="ScreenMarginContainer/Panel/PanelMarginContainer/FullFormContainer/HelpFormDivider/FormFieldsDivider/FormLabelsContainer"]
margin_right = 92.0
margin_bottom = 58.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Set Name"

[node name="NameLabel2" type="RichTextLabel" parent="ScreenMarginContainer/Panel/PanelMarginContainer/FullFormContainer/HelpFormDivider/FormFieldsDivider/FormLabelsContainer"]
margin_top = 62.0
margin_right = 92.0
margin_bottom = 158.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.65
text = "Measure Mode"

[node name="FormFieldsContainer" type="VBoxContainer" parent="ScreenMarginContainer/Panel/PanelMarginContainer/FullFormContainer/HelpFormDivider/FormFieldsDivider"]
margin_left = 104.0
margin_right = 357.0
margin_bottom = 158.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.8

[node name="LineEdit" type="LineEdit" parent="ScreenMarginContainer/Panel/PanelMarginContainer/FullFormContainer/HelpFormDivider/FormFieldsDivider/FormFieldsContainer"]
margin_right = 253.0
margin_bottom = 58.0
size_flags_horizontal = 3
size_flags_vertical = 3
max_length = 20

[node name="ItemList" type="ItemList" parent="ScreenMarginContainer/Panel/PanelMarginContainer/FullFormContainer/HelpFormDivider/FormFieldsDivider/FormFieldsContainer"]
margin_top = 62.0
margin_right = 253.0
margin_bottom = 158.0
size_flags_vertical = 3
size_flags_stretch_ratio = 1.65

[node name="HelpIconsContainer" type="VBoxContainer" parent="ScreenMarginContainer/Panel/PanelMarginContainer/FullFormContainer/HelpFormDivider"]
margin_left = 369.0
margin_right = 390.0
margin_bottom = 158.0
size_flags_horizontal = 0

[node name="SetNameHelp" type="Button" parent="ScreenMarginContainer/Panel/PanelMarginContainer/FullFormContainer/HelpFormDivider/HelpIconsContainer"]
margin_right = 21.0
margin_bottom = 30.0
size_flags_horizontal = 0
size_flags_vertical = 0
size_flags_stretch_ratio = 0.8
text = "?"

[node name="HSeparator" type="HSeparator" parent="ScreenMarginContainer/Panel/PanelMarginContainer/FullFormContainer/HelpFormDivider/HelpIconsContainer"]
margin_top = 34.0
margin_right = 21.0
margin_bottom = 124.0
size_flags_vertical = 3

[node name="MeasureModeHelp" type="Button" parent="ScreenMarginContainer/Panel/PanelMarginContainer/FullFormContainer/HelpFormDivider/HelpIconsContainer"]
margin_top = 128.0
margin_right = 21.0
margin_bottom = 158.0
size_flags_horizontal = 0
size_flags_vertical = 0
size_flags_stretch_ratio = 0.8
text = "?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator" type="HSeparator" parent="ScreenMarginContainer/Panel/PanelMarginContainer/FullFormContainer"]
margin_top = 162.0
margin_right = 390.0
margin_bottom = 166.0

[node name="FormSubmitContainer" type="HBoxContainer" parent="ScreenMarginContainer/Panel/PanelMarginContainer/FullFormContainer"]
margin_top = 170.0
margin_right = 158.0
margin_bottom = 200.0
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="ConfirmButton" type="Button" parent="ScreenMarginContainer/Panel/PanelMarginContainer/FullFormContainer/FormSubmitContainer"]
margin_right = 83.0
margin_bottom = 30.0
text = "Confirm"

[node name="CancelButton" type="Button" parent="ScreenMarginContainer/Panel/PanelMarginContainer/FullFormContainer/FormSubmitContainer"]
margin_left = 87.0
margin_right = 158.0
margin_bottom = 30.0
text = "Cancel"

[node name="HelpPopup" type="AcceptDialog" parent="ScreenMarginContainer/Panel"]
margin_right = 106.0
margin_bottom = 66.0
rect_min_size = Vector2( 420, 240 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="ScreenMarginContainer/Panel/HelpPopup"]
margin_left = 8.0
margin_top = 8.0
margin_right = 412.0
margin_bottom = 208.0
rect_min_size = Vector2( 400, 200 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "Here you will display text about the feature the user clicked on."
text = "Here you will display text about the feature the user clicked on."
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="ScreenMarginContainer/Panel/PanelMarginContainer/FullFormContainer/HelpFormDivider/HelpIconsContainer/SetNameHelp" to="." method="_on_SetNameHelp_pressed"]
[connection signal="pressed" from="ScreenMarginContainer/Panel/PanelMarginContainer/FullFormContainer/HelpFormDivider/HelpIconsContainer/MeasureModeHelp" to="." method="_on_MeasureModeHelp_pressed"]
[connection signal="pressed" from="ScreenMarginContainer/Panel/PanelMarginContainer/FullFormContainer/FormSubmitContainer/ConfirmButton" to="." method="_on_ConfirmButton_pressed"]
[connection signal="pressed" from="ScreenMarginContainer/Panel/PanelMarginContainer/FullFormContainer/FormSubmitContainer/CancelButton" to="." method="_on_CancelButton_pressed"]
